Fixed install icon not showing.

--- a/steam/custom-css/library.css
+++ b/steam/custom-css/library.css
@@ -234,6 +234,10 @@
   transform: rotateX(3deg) translateZ(15px);
 }
 
+._3BPFqWN5T-x8njyrRYM1CX {
+  z-index: 10;
+}
+
 /* fixed "family sharing" missing a bg */
 .My_SveQxVY_oRxfkK5mqN {
   background: #363c45;
